--- a/src/scss/_functions.scss
+++ b/src/scss/_functions.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 @function rem($size) {
   @if $size == 0 {
     @return 0;
@@ -7,73 +9,37 @@
     @return 1px;
   }
 
-  @return $size / 16 * 1rem;
+  @return math.div($size, 16) * 1rem;
 }
 
-@function spacer($size) {
-  @if $size == 0 {
-    @return 0;
-  }
-
-  @if $size == px {
-    @return 1px;
-  }
-
-  @if $size == auto {
-    @return auto;
-  }
-
-  @return $spacer * $size;
-}
-
-@function spacing($size1, $size2: null, $size3: null, $size4: null) {
-  $spacing: spacer($size1);
+@function spacer($size1, $size2: null, $size3: null, $size4: null) {
+  $spacing: rem($size1);
 
   @if type-of($size2) == 'null' {
     @return $spacing;
   }
 
-  $spacing: $spacing spacer($size2);
+  $spacing: $spacing rem($size2);
 
   @if type-of($size3) == 'null' {
     @return $spacing;
   }
 
-  $spacing: $spacing spacer($size3);
+  $spacing: $spacing rem($size3);
 
   @if type-of($size4) == 'null' {
     @return $spacing;
   }
 
-  $spacing: $spacing spacer($size4);
+  $spacing: $spacing rem($size4);
 
   @return $spacing;
 }
 
-@function is-list($variable) {
-  @return type-of($variable) == list;
-}
-
-@function max($numbers...) {
-  @return m#{a}x(#{$numbers});
-}
-
-@function min($numbers...) {
-  @return m#{i}n(#{$numbers});
-}
-
-@function str-split($string, $delimiter: ',') {
-  $split-array: ();
-  $index: str-index($string, $delimiter);
-
-  @while $index != null {
-    $item: str-slice($string, 1, $index - 1);
-    $split-array: append($split-array, $item);
-    $string: str-slice($string, $index + 1);
-    $index: str-index($string, $delimiter);
+@function strip-unit($number) {
+  @if type-of($number) == 'number' and not unitless($number) {
+    @return math.div($number, $number * 0 + 1);
   }
 
-  $split-array: append($split-array, $string);
-
-  @return $split-array;
+  @return $number;
 }
