what why who components

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -56,3 +56,8 @@
 @import 'partials/fonts';
 @import 'partials/scaffolding';
 @import 'partials/type';
+
+// Components
+@import 'components/What';
+@import 'components/Who';
+@import 'components/Why';
