--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -56,8 +56,10 @@
 @import 'partials/fonts';
 @import 'partials/scaffolding';
 @import 'partials/type';
+@import 'partials/misc';
 
 // Components
 @import 'components/What';
 @import 'components/Who';
 @import 'components/Why';
+@import 'components/Members';
