--- a/src/scss/components/_What.scss
+++ b/src/scss/components/_What.scss
@@ -33,12 +33,13 @@
   }
 
   &__title {
-    margin: spacer(0, 0, 8);
+    margin: spacer(0, 0, 12);
   }
 
   &__text {
     max-width: 24em;
-    margin-left: 3.75em;
+    @include rfs(rem(60), margin-left);
+    margin-bottom: 0;
     color: $color-5;
   }
 }
