--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -63,3 +63,5 @@
 @import 'components/Who';
 @import 'components/Why';
 @import 'components/Members';
+@import 'components/Faqs';
+@import 'components/Faq';
