--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -63,5 +63,6 @@
 @import 'components/Who';
 @import 'components/Why';
 @import 'components/Members';
-@import 'components/Faqs';
 @import 'components/Faq';
+@import 'components/Faqs';
+@import 'components/Footer';
