add header & other improvements

--- a/src/scss/components/_What.scss
+++ b/src/scss/components/_What.scss
@@ -1,6 +1,7 @@
 .What {
   position: relative;
-  padding-top: rem(60);
+  margin-top: -15%;
+  padding-top: 27.5%;
   padding-bottom: rem(60);
 
   &__background {
