--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -59,6 +59,7 @@
 @import 'partials/misc';
 
 // Components
+@import 'components/Header';
 @import 'components/What';
 @import 'components/Who';
 @import 'components/Why';
