add form section

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -18,6 +18,7 @@ $color-9: #10b37d;
 $color-10: #4d7069;
 $color-11: #8aa694;
 $color-12: #c64ad4;
+$color-13: #d8d8d8;
 
 $primary: $color-9;
 $secondary: $color-6;
