--- a/src/scss/components/_Faq.scss
+++ b/src/scss/components/_Faq.scss
@@ -4,7 +4,7 @@
   &__title {
     margin: 0;
     font-family: $font-family-base;
-    font-size: $h3-font-size;
+    @include font-size($h3-font-size);
     font-weight: $font-weight-light;
     letter-spacing: 0.025em;
     color: inherit;
