--- a/src/scss/partials/_scaffolding.scss
+++ b/src/scss/partials/_scaffolding.scss
@@ -3,6 +3,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.main-wrapper {
+  overflow: hidden;
+}
+
 img {
   max-width: 100%;
   height: auto;
