add big play button to video section

--- a/src/scss/components/_Video.scss
+++ b/src/scss/components/_Video.scss
@@ -148,10 +148,64 @@
     &__poster {
       transform: scale(1.05);
     }
+
+    &__control--overlaid {
+      width: 20%;
+      max-width: rem(160);
+      padding: 0;
+      background: none !important;
+      opacity: 1;
+      transform: translate(-50%, -75%);
+
+      &::before {
+        content: '';
+        display: block;
+        padding-top: 100%;
+        pointer-events: none;
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-image: url('#{$images-path}/play-button.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        transition: $transition-base;
+        pointer-events: none;
+      }
+
+      &:hover {
+        &::after {
+          transform: scale(1.05);
+        }
+      }
+
+      svg {
+        display: none;
+      }
+    }
+  }
+
+  .plyr--playing {
+    .plyr__control--overlaid {
+      opacity: 0;
+    }
   }
 
   @include media-breakpoint-up(sm) {
     @include rfs(rem(60), margin-left);
+
+    .plyr {
+      &__control--overlaid {
+        transform: translate(-50%, -50%);
+      }
+    }
   }
 
   @include media-breakpoint-up(lg) {
