add VideoModal & other improvements

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -63,12 +63,14 @@
 
 // Components
 @import 'components/Button';
-@import 'components/TextField';
 @import 'components/Header';
 @import 'components/About';
 @import 'components/Members';
 @import 'components/Video';
+@import 'components/VideoPlayer';
+@import 'components/VideoModal';
 @import 'components/Faq';
 @import 'components/Faqs';
 @import 'components/Form';
+@import 'components/TextField';
 @import 'components/Footer';
