--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -60,6 +60,7 @@
 @import 'partials/scaffolding';
 @import 'partials/type';
 @import 'partials/misc';
+@import 'partials/transitions';
 
 // Components
 @import 'components/Button';
