--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,8 @@
 $images-path: '../assets/images';
 $fonts-path: '../assets/fonts';
 
+$enable-smooth-scroll: false;
+
 // Colors
 $black: #000000;
 $white: #ffffff;
