--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -69,6 +69,7 @@
 @import 'components/About';
 @import 'components/Testimonials';
 @import 'components/Members';
+@import 'components/EcoSystem';
 @import 'components/Video';
 @import 'components/VideoPlayer';
 @import 'components/VideoModal';
