split Header and Navbar

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -65,6 +65,7 @@
 
 // Components
 @import 'components/Button';
+@import 'components/Navbar';
 @import 'components/Header';
 @import 'components/About';
 @import 'components/Testimonials';
