--- a/src/scss/partials/_scaffolding.scss
+++ b/src/scss/partials/_scaffolding.scss
@@ -4,7 +4,15 @@ body {
 }
 
 .main-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   overflow: hidden;
+
+  .Footer {
+    margin-top: auto;
+  }
 }
 
 img {
