--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -37,7 +37,7 @@
       display: block;
       width: 100%;
       height: auto;
-      transition: $transition-base;
+      @include transition-base;
       pointer-events: none;
     }
 
