--- a/src/scss/components/_Navbar.scss
+++ b/src/scss/components/_Navbar.scss
@@ -57,7 +57,7 @@
       display: block;
       color: $color-11;
       text-decoration: none;
-      transition: $transition-base;
+      @include transition-base;
 
       &:hover {
         color: $color-9;
