--- a/src/scss/components/_Faq.scss
+++ b/src/scss/components/_Faq.scss
@@ -14,7 +14,7 @@
       line-height: $line-height-base;
       text-decoration: none;
       box-shadow: inset 0 rem(-2) 0 0 $color-9;
-      transition: $transition-base;
+      @include transition-base;
 
       &:hover {
         color: $color-9;
@@ -22,17 +22,7 @@
     }
   }
 
-  &__content-wrapper {
-    position: relative;
-    height: 0;
-    overflow: hidden;
-    transition: height 0.4s ease;
-  }
-
   &__content {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     max-width: 42em;
     padding-top: spacer(12);
