--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -21,9 +21,11 @@ $color-10: #4d7069;
 $color-11: #8aa694;
 $color-12: #c64ad4;
 $color-13: #d8d8d8;
+$color-14: #b31010;
 
 $primary: $color-9;
 $secondary: $color-6;
+$error: $color-14;
 
 $body-color: $color-4;
 $body-bg: $white;
