--- a/src/scss/components/_TextField.scss
+++ b/src/scss/components/_TextField.scss
@@ -31,8 +31,23 @@
     }
 
     &.is-invalid {
-      border-color: #b31010;
+      border-color: $error;
+
+      &::placeholder {
+        color: $error;
+      }
     }
+  }
+
+  &__error-message {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    margin-top: spacer(4);
+    font-size: 0.875em;
+    line-height: 1.28571429;
+    color: $error;
   }
 
   textarea.TextField__input {
