--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -70,6 +70,7 @@
 @import 'components/About';
 @import 'components/Testimonials';
 @import 'components/Members';
+@import 'components/Join';
 @import 'components/EcoSystem';
 @import 'components/Video';
 @import 'components/VideoPlayer';
