feat: add Osano script and styling

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -52,6 +52,9 @@
 // Utilities
 // @import 'bootstrap/scss/utilities/api';
 
+// Consent Banner
+@import 'osano';
+
 // Vendor
 @import 'vendor/flickity';
 @import 'vendor/plyr';
